crates/ink/tests/ui/contract/fail/constructor/constructor-missing-return.stderr
error: missing return for ink! constructor
  --> tests/ui/contract/fail/constructor/constructor-missing-return.rs:10:13
   |
10 |         pub fn constructor() {}
   |             ^^^^^^^^^^^^^^^^
